src/golden/cards/templates/typeerrors/test.golden/resolvederror.fl
	struct Content
		String s

	card FromApply
		template main
			inner <- [Content ("hello" ++ "world")] => one
			
		template one <- (Content c)
			entry1 <- nth 1 [ c, c ]
			
